# LabelWithPropertyValues

./: pyproject.toml
examples/: LabelWithPropertyValuesExample.ovito  LabelWithPropertyValuesExample.py
src/LabelWithPropertyValues/: __init__.py
