[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LabelWithPropertyValues"
version = "1.0"
description = "Viewport overlay for labeling particles and bonds"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Constanze Kalcher]", email = "kalcher@ovito.org"}, {name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "OVITO support", email = "support@ovito.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ovito >= 3.11",
]

[project.urls]
repository = "https://github.com/ovito-org/LabelWithPropertyValues"

[project.entry-points.'OVITO.ViewportOverlay']
"Label with property values" = "LabelWithPropertyValues:LabelWithPropertyValues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]